<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="total_budget">Total Budget</string>
    <string name="amount_spent">Amount Spent</string>
    <string name="amount_left">Budget Left</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="rs">\u20B9</string>
    <string name="add_expense">Add Expense</string>
    <string name="stop_trip">End Trip</string>
    <string name="view_expenses">View/Add Expenses</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="options">Options</string>
    <string name="end_trip_title">End Trip ?</string>
    <string name="end_trip_description">This action cannot be undone!</string>
    <string name="end_trip_positive">End</string>
    <string name="end_trip_cancel">Cancel</string>
    <string name="expenses">Expenses</string>
    <string name="new_expense">New Expense</string>
    <string name="about">About</string>
    <string name="app_name_space">Expense Manager</string>
    <string name="days">Days</string>
    <string name="new_trip_from_hint">Enter Source</string>
    <string name="new_trip_to_hint">Enter Destination</string>
    <string name="new_trip_budget_hint">Enter total budget</string>
    <string name="no_active_trips">There is no active trip\nPress below to add a trip</string>
    <string name="start_trip">Start Trip</string>
    <string name="new_trip">New Trip</string>
    <string name="trip_details">Trip Details</string>
    <string name="dialog_continue">Do you want to continue?</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_go_back">Go Back</string>
    <string name="show_expense_categorywise">Show Category Wise</string>
    <string name="show_expense_datewise">Show Date Wise</string>
    <string name="show_in_detail">Show in Detail</string>
    <string name="category">Category</string>
    <string name="particulars">Particulars</string>
    <string name="Amount">Amount</string>
    <string name="Date">Date</string>
    <string name="save_expense">Save</string>
    <string name="cancel_expense">Cancel</string>
    <string name="from_check_new_trip">Source cannot be empty.</string>
    <string name="to_check_new_trip">Destination cannot be empty.</string>
    <string name="budget_check_new_trip">Budget cannot be empty.</string>
    <string name="budget_check_proper_value">Budget value should be appropriate.</string>
    <string name="pref_user_name">User Name</string>
    <string name="pref_user_name_summary">Change your name here</string>
    <string name="pref_pin">Pin</string>
    <string name="pref_pin_summary">Enter your pin here</string>
    <string name="your_name">Your Name</string>
    <string name="pref_pin_check">Use a pin</string>
    <string name="pref_pin_check_summary">Check this to enable pin locking. Asks for a pin every time you open the app</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_name_edit_text">Enter your name here</string>
    <string name="pin_dialog">PIN</string>
    <string name="pin_edit_text">Enter your pin here</string>
    <string name="unlock_button">Unlock</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="wrong_pin">Wrong pin</string>
    <string name="particulars_dialog_close">Close</string>
    <string name="expense_details">Expense Details</string>
    <string name="no_particulars_set">No description available</string>
    <string name="no_previous_trips">There are no previous trips\nFinish trips and they will show up here\nGo to current trip to add a new trip</string>
    <string name="select_category">Select Category</string>
    <string name="category_not_selected">Please select a category</string>
    <string name="amount_not_entered">Please enter an amount</string>
    <string name="no_expenses_available">No expenses added for this trip</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="previous_trip_delete_dialog_title">Delete trip?</string>
    <string name="previous_trip_delete_dialog_description">All the data will be deleted, this cannot be undone.</string>
    <string name="previous_trip_delete_dialog_delete_button">Delete Trip</string>
    <string name="total_trips">Total Trips : </string>
    <string name="total_money_spent">Total Money spent : </string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="long_click_delete_category">Delete all the expenses of this Category</string>
    <string name="long_click_delete_date">Delete all the expenses of this Date</string>
    <string name="chart_representation">View chart</string>
    <string name="about_text">Expense Manager is an app to manage your expense while you are on a trip. This app was created as a course project.
    It covers most of the common expense categories and provides various other features like viewing the expense in three different ways : as a list,
     category wise and date wise. A graphical representation of the same is also available for every trip. Once you have finished a trip, it goes to the
    previous trip section where you can see all of your previous trips and details about the trips like the start date, end date, total days, money left,
    money spent etc. You can delete any previous trips whenever you want. A summary of total trips and total money spent is provided in the top of the
    sidebar. Pin locking is also available in the settings to protect your app, you can turn it off and on whenever you like.</string>
    <string name="add_photo">Add Photo : </string>
    <string name="take_photo">Take Photo </string>
    <string name="choose_photo">Choose from Library</string>
    <string name="save">Save</string>
    <string name="saved_image">Image saved in gallery</string>
</resources>
