<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_trip_title"
        android:gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/end_trip_description"
        android:padding="24dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/trip_custom_dialog_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/expense_button"
            android:textColor="@drawable/expense_button"
            android:text="@string/end_trip_cancel"/>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/trip_custom_dialog_end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/expense_button"
            android:textColor="@drawable/expense_button"
            android:text="@string/end_trip_positive"/>
    </LinearLayout>
</LinearLayout>