<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_grey"
        android:text="@string/add_photo"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="16dp"
        android:padding="16dp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/navbar_add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textColor="@drawable/category_item"
        android:background="@drawable/category_item"
        android:text="@string/take_photo"
        android:textSize="16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/navbar_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textColor="@drawable/category_item"
        android:background="@drawable/category_item"
        android:text="@string/choose_photo"
        android:textSize="16dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <Button
        android:id="@+id/navbar_cancel_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textColor="@drawable/category_item"
        android:background="@drawable/category_item"
        android:text="@string/cancel_expense"
        android:textSize="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>




</LinearLayout>