<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_dialog"
        android:gravity="center"
        android:padding="8dp"
        android:background="@color/dark_grey"
        android:textColor="@android:color/white"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/pin_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin_edit_text"
        android:gravity="center"
        android:padding="24dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/unlock_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/unlock_button"
        android:background="@drawable/expense_button"
        android:textColor="@drawable/expense_button"
        android:textSize="16dp"/>

</LinearLayout>