<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/previous_trip_delete_dialog_title"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/previous_trip_delete_dialog_description"
        android:textSize="16dp"
        android:textColor="@color/dark_grey_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/previous_trip_delete_dialog_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/expense_button"
            android:text="@string/end_trip_cancel"
            android:textColor="@drawable/expense_button"/>

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/previous_trip_delete_dialog_delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/expense_button"
            android:text="@string/previous_trip_delete_dialog_delete_button"
            android:textColor="@drawable/expense_button"/>
    </LinearLayout>
</LinearLayout>