<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="8dp"
              android:background="@drawable/previous_trip_item_normal"
              android:orientation="vertical"
              android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textColor="@color/dark_grey"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/previous_place_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:singleLine="false"
                android:text="Delhi"
                android:textColor="@color/dark_grey_text"
                android:textSize="16sp"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:src="@drawable/previous_plane_image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textColor="@color/dark_grey"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/previous_place_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Noida"
                android:textColor="@color/dark_grey_text"
                android:textSize="16sp"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp"
        android:text="@string/total_budget"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/previous_total_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp"
        android:text="\u20B9 2500"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/money_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/money"/>

        <ProgressBar
            android:id="@+id/previous_trip_progress_spent_money"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:progress="34"
            android:layout_below="@id/money_image"
            />

        <TextView
            android:id="@+id/previous_trip_spent_money_percentage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="34%"
            android:textColor="@color/dark_grey_text"
            android:textStyle="bold|italic"
            android:layout_alignParentRight="true"
            android:layout_toLeftOf="@id/money_image"
            android:layout_margin="4dp"/>
    </RelativeLayout>


</LinearLayout>